Fixing a 32bit compiler warning in clang 4.0

See https://bugzilla.mozilla.org/show_bug.cgi?id=1378412