rtc_base/task_queue_libevent.cc
@@ -387,8 +387,8 @@ void TaskQueue::Impl::PostDelayedTask(std::unique_ptr<QueuedTask> task,
     QueueContext* ctx =
         static_cast<QueueContext*>(pthread_getspecific(GetQueuePtrTls()));
     ctx->pending_timers_.push_back(timer);
-    timeval tv = {rtc::dchecked_cast<int>(milliseconds / 1000),
-                  rtc::dchecked_cast<int>(milliseconds % 1000) * 1000};
+    timeval tv = {rtc::dchecked_cast<time_t>(milliseconds / 1000),
+                  rtc::dchecked_cast<suseconds_t>(milliseconds % 1000) * 1000};
     event_add(&timer->ev, &tv);
   } else {
     PostTask(std::unique_ptr<QueuedTask>(
